--- a/Linkedin-Nubia.ipynb
+++ b/Linkedin-Nubia.ipynb
@@ -35,9 +35,9 @@
     "\n",
     "for card in cards:\n",
     "    job_post_url.append(card.get_attribute(\"href\"))\n",
-    "print(lista)\n",
+    "print(job_post_url)\n",
     "    \n",
-    "df = pd.DataFrame(lista)\n",
+    "df = pd.DataFrame(job_post_url)\n",
     "print(df.head())\n",
     "df.to_csv('linkedin_output_nubia.csv')"
    ]
